crates/tui/tests/storybook/snapshots/app_transcript_view_state__user_message_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                                                       14:37:03
 Plan the parser refactor.
 Keep the API stable.
 Add regression tests.





  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
